more events overflow fix

--- a/app/assets/stylesheets/bootstrap-flat-ui.css.scss
+++ b/app/assets/stylesheets/bootstrap-flat-ui.css.scss
@@ -247,6 +247,9 @@ a:hover {
   padding: 9px 12px 10px;
   line-height: 22px;
   text-decoration: none;
+  
+  font-weight:400 !important;
+
   text-shadow: none !important;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
