--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -210,7 +210,7 @@
   }
 
   .events_modal_block {
-    width:394px;
+    width:392px; // reduced by 4px for windows
     height:190px;
     float:left;
     text-align:center;
