--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -129,6 +129,7 @@
   width:14px;
   margin:-7px -8px -8px 5px;
   display:inline-block;
+  color:white;
   background-color:$cn_colour_-2 !important;
   -moz-border-top-right-radius:    3px !important;
   -webkit-border-top-right-radius: 3px !important;
